--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,10 +5,33 @@
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link href="/css/base.css" rel="stylesheet">
+  <style>
+    body {
+      text-align: center;
+    }
+    body::before {
+      content: "";
+      background-image: url("/image/画面設計.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0.7;
+      z-index: -1;
+    }
+  </style>
 </head>
 <body>
   <div id="app">
     <button type="button" @click="openPopup">フォームを開く</button>
+
+
+
 
     {{ isPopupOpen }}
 
